-issue#5420: PHP8.1.x, PHP-SNMP and snmp->get() errors due to improper use of trim() function
-issue#5426: Importing a legacy Data Query Template can result in the Template being unusable
-issue#5427: Unable to hook the settings.php page with JavaScript action
-issue#5434: Remove SQL Mode NO_AUTO_CREATE_USER as it's deprecated and removed from recent MySQL releases
-issue#5440: Device class not saved when importing a template during a new installation 
-issue#5446: Duplication functions for Graph/Template and Data Source/Template do not return an id
-issue#5447: Duplication of Device Templates happens in the base Cacti file and not in an API file
-issue#5450: Unable to bulk convert to latin1 if desired
-issue#5451: Reported on the Forums, Graph creation slows over time
-issue#5452: The default 'bulk_walk_size' is -1 which means a device will never find it's optimal bulk walk size
-feature#5375: Add template for Fortinet firewall and Aruba Instant cluster
-feature#5393: Add template for SNMP printer
-feature#5418: Display device class before package import 
-feature#5442: Table settings - extend column size, log error when variable name is truncated
-feature#5444: Table settings_user - extend column size, log error when variable name is truncated
-feature#5448: Data Queries do not have a Duplication function
-feature: Update Cisco Device Template to include HSRP graph template
-feature: Upgrade billboard.js to version 3.7.4
-feature: Upgrade d3.js to version 7.8.2
-feature: Upgrade ua-parser.js to version 1.0.35
-feature: New hook for device template change 'device_template_change'

1.2.24
-issue#5127: Unable to import Local Linux Machine template
-issue#5134: Maximum Memory shows -1 instead of Unlimited
-issue#5135: RRDcleaner and RRDcheck share the same filter details causing errors
-issue#5136: When passed a null value, number_format_i18n() can return a invalid number by ddb4github
-issue#5137: When attempting to update structured paths, SQL errors can occur